--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "yeoman-generator"
   ],
   "devDependencies": {
+    "eslint": "^5.10.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
     "prettier": "^1.15.2"
   },
   "dependencies": {
