--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "files": [
     "generators"
   ],
-  "main": "generators/index.js",
   "keywords": [
     "yeoman-generator"
   ],
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "prettier": "^1.19.1"
   },
   "dependencies": {
-    "yeoman-generator": "^4.4.0",
-    "chalk": "^3.0.0",
-    "yosay": "^2.0.2"
+    "yeoman-generator": "^4.5.0"
   }
 }
