--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "yeoman-generator"
   ],
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-config-standard": "^14.1.0",
